[package]
name = "waitfree-sync"
version = "0.2.0"
edition = "2021"
rust-version = "1.66"
license = "MIT OR Apache-2.0"
repository = "https://github.com/novomation/waitfree-sync"
homepage = "https://github.com/novomation/waitfree-sync"
authors = ["Marc Fischer"]

[dependencies]
crossbeam-utils = "0.8"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
crossbeam-channel = "0.5.15"
flume = "0.11.1"
affinity = "0.1"

[target.'cfg(loom)'.dependencies]
loom = "0.7"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }


[[bench]]
name = "cyclic"
harness = false
