[package]
name = "waitfree-sync"
version = "0.3.0"
edition = "2021"
rust-version = "1.66"
license = "MIT OR Apache-2.0"
repository = "https://github.com/novomation/waitfree-sync"
homepage = "https://github.com/novomation/waitfree-sync"
authors = ["Marc Fischer"]
readme = "Readme.md"

[dependencies]
crossbeam-utils = "0.8"

[target.'cfg(loom)'.dependencies]
loom = "0.7"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
